Dropdown styles (nav module)

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -20,7 +20,6 @@
     'modules/type/_module',
     'modules/nav/_module',
     'modules/_tabs',
-    'modules/_dropdowns',
     'modules/buttons/_module',
     'modules/forms/_module',
     'modules/_labels',
@@ -28,6 +27,7 @@
     'modules/tables/_module',
     'modules/_state',
     'modules/panels/_module';
+    /* 'modules/_dropdowns'; */
     /* 'modules/_alerts'; */
     /* 'modules/_animations'; */
 
