--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -30,6 +30,7 @@ $color-dark: #363636 !default;
 $color-light: #EFEFEF !default;
 $color-gray: #525252 !default;
 $color-gray-light: #EFEFEF !default;
+$color-white: #FFF !default;
 
 $color-success: #96CC69 !default;
 $color-warning: #FFCC5C !default;
@@ -263,15 +264,15 @@ $field-margin-bottom: $fieldset-margin-bottom !default;
 // Navigation Settings
 // $nav-style: normal !default;
 // $nav-theme: normal !default;
-$nav-ul-padding: 0 !default;
+// $nav-ul-padding: 0 !default;
 $nav-li-padding: 0 !default;
-$nav-a-padding: $x-rem / 2 !default;
-$nav-header-padding: $nav-a-padding !default;
-$nav-menu-bgcolor: transparent !default;
-$nav-submenu-bgcolor: $color-primary !default;
-$nav-separator-color: $color-gray !default;
-$nav-separator-width: 1px !default;
-$nav-separator-margin: $x/4 0 !default;
+// $nav-a-padding: $x-rem / 2 !default;
+// $nav-header-padding: $nav-a-padding !default;
+// $nav-menu-bgcolor: transparent !default;
+// $nav-submenu-bgcolor: $color-primary !default;
+// $nav-separator-color: $color-gray !default;
+// $nav-separator-width: 1px !default;
+// $nav-separator-margin: $x/4 0 !default;
 
 // Tabs Settings
 $tabs-style: normal !default;
