Tabs styles (nav module)

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -19,7 +19,6 @@
     'modules/_layers',
     'modules/type/_module',
     'modules/nav/_module',
-    'modules/_tabs',
     'modules/buttons/_module',
     'modules/forms/_module',
     'modules/_labels',
@@ -27,6 +26,7 @@
     'modules/tables/_module',
     'modules/_state',
     'modules/panels/_module';
+    /* 'modules/_tabs'; */
     /* 'modules/_dropdowns'; */
     /* 'modules/_alerts'; */
     /* 'modules/_animations'; */
