--- a/scss/modules/nav/_module.scss
+++ b/scss/modules/nav/_module.scss
@@ -33,6 +33,10 @@ $dropdown-z-index: 999 !default;
 $dropdown-radius: $form-radius !default;
 $dropdown-min-width: 10rem !default;
 
+// Tabs Settings
+$tabs-style: default !default;
+$tabs-theme: default !default;
+
 // Imports
 @import
 	'_mixins',
