--- a/scss/modules/nav/_module.scss
+++ b/scss/modules/nav/_module.scss
@@ -32,6 +32,7 @@ $dropdown-scale: -1 !default;
 $dropdown-z-index: 999 !default;
 $dropdown-radius: $form-radius !default;
 $dropdown-min-width: 10rem !default;
+$dropdown-text-align: left !default;
 
 // Tabs Settings
 $tabs-style: default !default;
