--- a/scss/modules/buttons/_components.scss
+++ b/scss/modules/buttons/_components.scss
@@ -80,7 +80,7 @@
 %button-group {
     @extend %clearfix;
 
-    > %button-group-buttons {
+    %button-group-buttons {
         @include border-radius(0);
         margin: 0;
         margin-left: -$button-border-width;
