Fixing transition in buttons module

--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -4765,6 +4765,79 @@ nav.dark.horizontal > ul > li.active, .dark.horizontal.nav > ul > li.active, nav
   border-bottom-color: #efefef;
 }
 
+/* line 5, ../scss/modules/forms/_components.scss */
+a, .light.dropdown-container > .dropdown li > a:hover, .light.alert a, .warning.alert a, nav > ul > li, .nav > ul > li, nav.vertical > ul > li, .vertical.nav > ul > li, nav.primary > ul > li, .primary.nav > ul > li, nav.primary.vertical > ul > li, .primary.vertical.nav > ul > li, nav.secondary > ul > li, .secondary.nav > ul > li, nav.secondary.vertical > ul > li, .secondary.vertical.nav > ul > li, nav.light > ul > li, .light.nav > ul > li, nav.light.vertical > ul > li, .light.vertical.nav > ul > li, nav.dark > ul > li, .dark.nav > ul > li, nav.dark.vertical > ul > li, .dark.vertical.nav > ul > li, textarea,
+input {
+  -webkit-transition-property: all;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease-in-out;
+  -moz-transition-timing-function: ease-in-out;
+  -o-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+}
+
+/* line 11, ../scss/modules/forms/_components.scss */
+textarea.small,
+input.small, textarea.large,
+input.large, textarea.inline,
+input.inline, textarea,
+input {
+  font-size: 13.77648px ;
+  font-size: 0.86103rem ;
+  width: 100%;
+  padding: 0.5rem;
+  background-image: none;
+  border-width: 1px;
+  border-style: solid;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+
+/* line 26, ../scss/modules/forms/_components.scss */
+textarea.small,
+input.small {
+  font-size: 11.86196px ;
+  font-size: 0.74137rem ;
+}
+
+/* line 31, ../scss/modules/forms/_components.scss */
+textarea.large,
+input.large {
+  font-size: 16px ;
+  font-size: 1rem ;
+}
+
+/* line 36, ../scss/modules/forms/_components.scss */
+textarea.inline,
+input.inline {
+  width: auto;
+}
+
+/* line 43, ../scss/modules/forms/_components.scss */
+textarea {
+  height: auto;
+}
+
+/* line 16, ../scss/modules/forms/_themes.scss */
+textarea,
+input {
+  border-color: #efefef;
+}
+/* line 20, ../scss/modules/forms/_themes.scss */
+textarea:focus,
+input:focus {
+  border-color: #024959;
+}
+
 /* line 7, ../scss/modules/buttons/_components.scss */
 button.tiny, .button.tiny, input[type=button].tiny, input[type=submit].tiny, button.small, .button.small, input[type=button].small, input[type=submit].small, button.large, .button.large, input[type=button].large, input[type=submit].large, button.huge, .button.huge, input[type=button].huge, input[type=submit].huge, button.left, .button.left, input[type=button].left, input[type=submit].left, button.right, .button.right, input[type=button].right, input[type=submit].right, button.full, .button.full, input[type=button].full, input[type=submit].full, button.block, .button.block, input[type=button].block, input[type=submit].block, button, .button, input[type=button], input[type=submit] {
   display: inline-block;
@@ -4932,74 +5005,12 @@ button.full, .button.full, input[type=button].full, input[type=submit].full {
   border-bottom-right-radius: 3px;
 }
 
-/* line 81, ../scss/modules/buttons/_themes.scss */
+/* line 16, ../scss/modules/buttons/_themes.scss */
 button, .button, input[type=button], input[type=submit] {
-  background-color: transparent;
-  border-color: #024959;
-  color: #024959;
-}
-/* line 70, ../scss/modules/buttons/_themes.scss */
-button:hover, .button:hover, input[type=button]:hover, input[type=submit]:hover, button:active, .button:active, input[type=button]:active, input[type=submit]:active {
-  background-color: #024959;
-  border-color: #024959;
-  color: #efefef;
-}
-/* line 85, ../scss/modules/buttons/_themes.scss */
-button.primary, .primary.button, input.primary[type=button], input.primary[type=submit] {
-  background-color: transparent;
-  border-color: #024959;
-  color: #024959;
-}
-/* line 70, ../scss/modules/buttons/_themes.scss */
-button.primary:hover, .primary.button:hover, input.primary[type=button]:hover, input.primary[type=submit]:hover, button.primary:active, .primary.button:active, input.primary[type=button]:active, input.primary[type=submit]:active {
-  background-color: #024959;
-  border-color: #024959;
-  color: #efefef;
-}
-/* line 86, ../scss/modules/buttons/_themes.scss */
-button.secondary, .secondary.button, input.secondary[type=button], input.secondary[type=submit] {
-  background-color: transparent;
-  border-color: #e74c30;
-  color: #e74c30;
-}
-/* line 70, ../scss/modules/buttons/_themes.scss */
-button.secondary:hover, .secondary.button:hover, input.secondary[type=button]:hover, input.secondary[type=submit]:hover, button.secondary:active, .secondary.button:active, input.secondary[type=button]:active, input.secondary[type=submit]:active {
-  background-color: #e74c30;
-  border-color: #e74c30;
-  color: #efefef;
-}
-/* line 87, ../scss/modules/buttons/_themes.scss */
-button.light, .light.button, input.light[type=button], input.light[type=submit] {
-  background-color: transparent;
-  border-color: #efefef;
-  color: #efefef;
-}
-/* line 70, ../scss/modules/buttons/_themes.scss */
-button.light:hover, .light.button:hover, input.light[type=button]:hover, input.light[type=submit]:hover, button.light:active, .light.button:active, input.light[type=button]:active, input.light[type=submit]:active {
-  background-color: #efefef;
-  border-color: #efefef;
-  color: #363636;
-}
-/* line 88, ../scss/modules/buttons/_themes.scss */
-button.dark, .dark.button, input.dark[type=button], input.dark[type=submit] {
-  background-color: transparent;
-  border-color: #363636;
-  color: #363636;
-}
-/* line 70, ../scss/modules/buttons/_themes.scss */
-button.dark:hover, .dark.button:hover, input.dark[type=button]:hover, input.dark[type=submit]:hover, button.dark:active, .dark.button:active, input.dark[type=button]:active, input.dark[type=submit]:active {
-  background-color: #363636;
-  border-color: #363636;
-  color: #efefef;
-}
-
-/* line 5, ../scss/modules/forms/_components.scss */
-a, .light.dropdown-container > .dropdown li > a:hover, .light.alert a, .warning.alert a, nav > ul > li, .nav > ul > li, nav.vertical > ul > li, .vertical.nav > ul > li, nav.primary > ul > li, .primary.nav > ul > li, nav.primary.vertical > ul > li, .primary.vertical.nav > ul > li, nav.secondary > ul > li, .secondary.nav > ul > li, nav.secondary.vertical > ul > li, .secondary.vertical.nav > ul > li, nav.light > ul > li, .light.nav > ul > li, nav.light.vertical > ul > li, .light.vertical.nav > ul > li, nav.dark > ul > li, .dark.nav > ul > li, nav.dark.vertical > ul > li, .dark.vertical.nav > ul > li, button, .button, input[type=button], input[type=submit], textarea,
-input {
-  -webkit-transition-property: all;
-  -moz-transition-property: all;
-  -o-transition-property: all;
-  transition-property: all;
+  -webkit-transition-property: border-color, background-color, color;
+  -moz-transition-property: border-color, background-color, color;
+  -o-transition-property: border-color, background-color, color;
+  transition-property: border-color, background-color, color;
   -webkit-transition-duration: 0.2s;
   -moz-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
@@ -5010,62 +5021,67 @@ input {
   transition-timing-function: ease-in-out;
 }
 
-/* line 11, ../scss/modules/forms/_components.scss */
-textarea.small,
-input.small, textarea.large,
-input.large, textarea.inline,
-input.inline, textarea,
-input {
-  font-size: 13.77648px ;
-  font-size: 0.86103rem ;
-  width: 100%;
-  padding: 0.5rem;
-  background-image: none;
-  border-width: 1px;
-  border-style: solid;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
+/* line 34, ../scss/modules/buttons/_themes.scss */
+button, .button, input[type=button], input[type=submit] {
+  background-color: #024959;
+  border-color: #012027;
+  color: #efefef;
 }
-
-/* line 26, ../scss/modules/forms/_components.scss */
-textarea.small,
-input.small {
-  font-size: 11.86196px ;
-  font-size: 0.74137rem ;
+/* line 26, ../scss/modules/buttons/_themes.scss */
+button:hover, .button:hover, input[type=button]:hover, input[type=submit]:hover, button:active, .button:active, input[type=button]:active, input[type=submit]:active {
+  background-color: #013540;
+  border-color: #000c0e;
 }
-
-/* line 31, ../scss/modules/forms/_components.scss */
-textarea.large,
-input.large {
-  font-size: 16px ;
-  font-size: 1rem ;
+/* line 37, ../scss/modules/buttons/_themes.scss */
+button.primary, .primary.button, input.primary[type=button], input.primary[type=submit] {
+  background-color: #024959;
+  border-color: #012027;
+  color: #efefef;
 }
-
-/* line 36, ../scss/modules/forms/_components.scss */
-textarea.inline,
-input.inline {
-  width: auto;
+/* line 26, ../scss/modules/buttons/_themes.scss */
+button.primary:hover, .primary.button:hover, input.primary[type=button]:hover, input.primary[type=submit]:hover, button.primary:active, .primary.button:active, input.primary[type=button]:active, input.primary[type=submit]:active {
+  background-color: #013540;
+  border-color: #000c0e;
 }
-
-/* line 43, ../scss/modules/forms/_components.scss */
-textarea {
-  height: auto;
+/* line 38, ../scss/modules/buttons/_themes.scss */
+button.secondary, .secondary.button, input.secondary[type=button], input.secondary[type=submit] {
+  background-color: #e74c30;
+  border-color: #cc3318;
+  color: #efefef;
 }
-
-/* line 16, ../scss/modules/forms/_themes.scss */
-textarea,
-input {
-  border-color: #efefef;
+/* line 26, ../scss/modules/buttons/_themes.scss */
+button.secondary:hover, .secondary.button:hover, input.secondary[type=button]:hover, input.secondary[type=submit]:hover, button.secondary:active, .secondary.button:active, input.secondary[type=button]:active, input.secondary[type=submit]:active {
+  background-color: #e3391a;
+  border-color: #b52e15;
 }
-/* line 20, ../scss/modules/forms/_themes.scss */
-textarea:focus,
-input:focus {
-  border-color: #024959;
+/* line 39, ../scss/modules/buttons/_themes.scss */
+button.light, .light.button, input.light[type=button], input.light[type=submit] {
+  background-color: #efefef;
+  border-color: #d5d5d5;
+  color: #363636;
 }
-
+/* line 26, ../scss/modules/buttons/_themes.scss */
+button.light:hover, .light.button:hover, input.light[type=button]:hover, input.light[type=submit]:hover, button.light:active, .light.button:active, input.light[type=button]:active, input.light[type=submit]:active {
+  background-color: #e2e2e2;
+  border-color: #c9c9c9;
+}
+/* line 40, ../scss/modules/buttons/_themes.scss */
+button.dark, .dark.button, input.dark[type=button], input.dark[type=submit] {
+  background-color: #363636;
+  border-color: #1c1c1c;
+  color: #efefef;
+}
+/* line 26, ../scss/modules/buttons/_themes.scss */
+button.dark:hover, .dark.button:hover, input.dark[type=button]:hover, input.dark[type=submit]:hover, button.dark:active, .dark.button:active, input.dark[type=button]:active, input.dark[type=submit]:active {
+  background-color: #292929;
+  border-color: #101010;
+}
+/* line 43, ../scss/modules/buttons/_themes.scss */
+button.quiet, .quiet.button, input.quiet[type=button], input.quiet[type=submit], button.primary.quiet, .primary.quiet.button, input.primary.quiet[type=button], input.primary.quiet[type=submit], button.secondary.quiet, .secondary.quiet.button, input.secondary.quiet[type=button], input.secondary.quiet[type=submit], button.light.quiet, .light.quiet.button, input.light.quiet[type=button], input.light.quiet[type=submit], button.dark.quiet, .dark.quiet.button, input.dark.quiet[type=button], input.dark.quiet[type=submit] {
+  background-color: transparent;
+  border-color: transparent;
+  color: #363636;
+}
 /* line 3, ../scss/modules/_labels.scss */
 .label {
   font-size: 11.86196px ;
