--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -171,17 +171,17 @@ $form-use-radius: false !default;
 $form-outline-color: lightblue !default;
 
 // Buttons
-$button-style: normal !default;
+// $button-style: normal !default;
 $button-selectors: "button, .button, input[type=button], input[type=submit]" !default;
 $button-margin-right: $form-margin-right !default;
 $button-margin-bottom: $button-margin-right !default;
 $button-padding-vertical: $form-padding-vertical !default;
 $button-padding-horizontal: $form-padding-horizontal * 2 !default;
-$button-border-width: $form-border-width !default;
+// $button-border-width: $form-border-width !default;
 $button-color-light: white !default;
 $button-type-scale: $form-type-scale !default;
-$button-text-transform: uppercase !default;
-$button-radius: $form-radius !default;
+// $button-text-transform: uppercase !default;
+// $button-radius: $form-radius !default;
 $button-use-radius: $form-use-radius !default;
 $button-transition-duration: 0.3s !default;
 $button-icon-margin: $x-rem / 2 !default;
