--- a/scss/modules/buttons/_module.scss
+++ b/scss/modules/buttons/_module.scss
@@ -3,8 +3,8 @@
 // ==============
 
 // Button Settings
-$button-style: transparent !default;
-$button-theme: transparent !default;
+$button-style: default !default;
+$button-theme: default !default;
 $button-margin: 0 0.5rem 0 0 !default;
 $button-padding: 0.5rem 1rem !default;
 $button-border-width: $form-border-width !default;
