--- a/scss/modules/nav/_module.scss
+++ b/scss/modules/nav/_module.scss
@@ -4,7 +4,7 @@
 
 // Navigation Settings
 $nav-style: default !default;
-$nav-theme: underline !default;
+$nav-theme: default !default;
 $nav-color: $type-anchor-color !default;
 $nav-list-padding: 0 !default;
 $nav-list-item-padding: 0 !default;
