--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -21,7 +21,7 @@
     'modules/nav/_module',
     'modules/forms/_module',
     'modules/buttons/_module',
-    'modules/_labels',
+    'modules/labels/_module',
     'modules/_fieldsets',
     'modules/tables/_module',
     'modules/_state',
