Adding animations module (Woohoo!)

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -25,7 +25,8 @@
     'modules/_fieldsets',
     'modules/tables/_module',
     'modules/_state',
-    'modules/panels/_module';
+    'modules/panels/_module',
+    'modules/animations/_module';
     /* 'modules/_tabs'; */
     /* 'modules/_dropdowns'; */
     /* 'modules/_alerts'; */
