--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -5,6 +5,7 @@
 @import "compass/css3/shared";
 @import "compass/css3/border-radius";
 @import "compass/css3/transition";
+@import "compass/css3/transform";
 
 // Units
 $x: 16px !default;
@@ -343,8 +344,8 @@ $alert-type-scale: -1 !default;
 // $panel-type-scale: 0 !default;
 
 // Animation Settings
-$animation-duration: 0.5s !default;
-$animation-timing-function: ease-in-out !default;
+// $animation-duration: 0.5s !default;
+// $animation-timing-function: ease-in-out !default;
 
 // Activation Settings
 $page-selector: ".page" !default;
